added dynamic svg generation

--- a/views/stock.html
+++ b/views/stock.html
@@ -1,8 +1,7 @@
 <div id="profile">
-
     
     <p><span>{{symbol}}</span></p>
-
+    {{svg}}
     <ul>
         <li><span>{{price}}</span> Current Price</li>
         <li><a href="/">search again</a></li>
